--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
  <!-- Navigation -->
   <nav>
     <ul>
-    <li><a href="#" class="active">Home</a></li>
-    <li><a href="#">About</a></li>
-    <li><a href="#">Services</a></li>
-    <li><a href="#">Contact</a></li>
+    <li class="tooltip1"><a href="#" class="active">Home<span class="tooltip11">Click to know more</span</a></li>
+    <li class="tooltip2"><a href="#">About<span class="tooltip21">Click to know more</span</a></li>
+    <li class="tooltip3"><a href="#">Services<span class="tooltip31">Click to know more</span</a></li>
+    <li class="tooltip4"><a href="#">Contact<span class="tooltip41">Click to know more</span></a></li>
  </ul>
   </nav>
 </body>
